# mlops_face_attribute_classification

./: .dockerignore  .dvcignore  .env.example  .gitignore  ARCHITECTURE.md  DVC_IMPROVEMENTS.md  Dockerfile  G10_L7.csv  G10_L8.csv  IMPLEMENTATION_REPORT.md  LABEL_PREPARATION.md  MLFLOW_GUIDE.md  QUICKSTART.md  README.md  Readme.md  SUMMARY.md  TESTING.md  UI_PREVIEW.md  docker-compose.full.yml  docker-compose.yml  dvc.yaml  map_annotations.py  merge_annotations.py  metrics.json  mlflow.  mlflow.db  model_summary.txt  params.yaml  pyproject.toml  requirements-monitoring.txt  requirements.txt  setup.cfg  start_mlflow_ui.sh
.dvc/: config
.github/: dependabot.yml
.github/workflows/: README.md  cd.yml  ci.yml  docker.yml  dvc-pipeline.yml  dvc.yml  model-training.yml  monitoring.yml
airflow/: Dockerfile  Dockerfile.airflow  README.md  cleanup_airflow.sh  docker-compose.airflow.yml  requirements-airflow.txt  start_airflow.sh
airflow/config/: airflow.cfg
airflow/dags/: __init__.py  (+5 more)
data/: annotations_example.txt  annotations_sample.csv  raw.dvc
deployment/: .dockerignore  Dockerfile  README.md  Readme.md  docker-compose.yaml  docker-compose.yml  quick_start.sh  requirements-api.txt
docs/: AIRFLOW_GUIDE.md  CSV_DRIVEN_PIPELINE.md  DVC_BEST_PRACTICES.md  SECURITY.md  airflow.md  ci-cd.md  monitoring.md
metrics/: eval_metrics.json  train_metrics.json
monitoring/: README.md  docker-compose.monitoring.yml
notebooks/: fast_training.ipynb  inference.ipynb  new_labels.csv  projet_mlops_(1).ipynb  projet_mlops_(1)_(1).ipynb  self_supervision.ipynb
scripts/: dvc_helper.sh  export_metrics.py  generate_annotations.py  init_airflow.sh  run_drift_check.py  test_installation.py
src/: __init__.py
templates/: index.html
tests/: __init__.py  conftest.py  test_airflow_dags.py  test_csv_driven_dataset.py  test_data.py  test_incremental_inference.py  test_integration_workflow.py  test_model.py  test_monitoring.py
(+47 files in other folders)
