[metadata]
name = mlops_face_attribute_classification
version = 0.1.0
description = MLOps Face Attribute Classification
author = omdrift
url = https://github.com/omdrift/mlops_face_attribute_classification

[options]
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    .dvc,
    mlruns,
    data,
    notebooks

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --strict-markers --cov=src --cov-report=term-missing --cov-report=html

[coverage:run]
source = src
omit = 
    */tests/*
    */test_*.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
